--- a/project-code/assets/style.css
+++ b/project-code/assets/style.css
@@ -19,10 +19,10 @@
 }
 
 :root {
-  --color-black: #222;
+  --color-black: #21211c;
   --color-white: white;
   --color-darkgrey: #323232;
-  --color-primary: #F1EFE7;
+  --color-primary: #f8f9f2;
   --color-red: #be3e2b;
   --color-blue: #576CA8;
   --font-title: "League Spartan", sans-serif;
@@ -40,6 +40,7 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
+  text-align: center;
 }
 body .yes, body .no {
   user-select: none;
