--- a/project-code/assets/style.scss
+++ b/project-code/assets/style.scss
@@ -13,11 +13,11 @@
 }
 
 :root{
-  --color-black: #222;
+  --color-black: #21211c;
   --color-white: white;
   --color-darkgrey: #323232;
 
-  --color-primary: #F1EFE7;
+  --color-primary: #f8f9f2;
   --color-red: #be3e2b;
   --color-blue: #576CA8;
 
@@ -36,6 +36,7 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
+  text-align: center;
 
   .yes, .no{
     user-select: none;
