--- a/project-code/assets/style.css
+++ b/project-code/assets/style.css
@@ -21,6 +21,7 @@
 :root {
   --color-black: #21211c;
   --color-white: white;
+  --color-white2: #dbdbdb;
   --color-darkgrey: #323232;
   --color-primary: #f8f9f2;
   --color-red: #be3e2b;
@@ -35,17 +36,76 @@
 }
 
 body {
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
   font-family: var(--font-content);
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
   text-align: center;
 }
-body .yes, body .no {
+body #app {
+  border: 2px solid var(--color-white2);
+  height: 50vh;
+  width: 80%;
+  border-radius: 15px;
+  margin: auto;
+  margin-top: 50px;
+}
+body #app h1 {
+  font-family: var(--font-title);
+  font-weight: 800;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 3vw;
+}
+body #app #questionContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+body #app #questionContainer label:first-of-type {
+  margin: 15px 0;
+  width: auto;
+}
+body #app #questionContainer input[type=radio] {
+  display: none;
+}
+body #app #questionContainer .radio0, body #app #questionContainer .radio1, body #app #questionContainer .radio2 {
+  display: block;
   user-select: none;
   padding: 20px;
-  border: 1px solid grey;
+  border: 1px solid var(--color-white2);
+  width: 30%;
+  text-align: left;
+  margin: auto;
+  margin-bottom: -15px;
+  border-radius: 10px;
+}
+body #app #questionContainer .radio0:hover, body #app #questionContainer .radio1:hover, body #app #questionContainer .radio2:hover {
+  cursor: pointer;
+}
+
+#restartTestIcon {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out;
+  font-size: 30px;
+  border: 1px solid var(--color-white2);
+  padding: 5px;
+  padding-top: 6px;
+  padding-bottom: 0px;
+  border-radius: 7px;
+}
+
+#restartTestIcon.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+#startTest {
+  border: 1px solid var(--color-white2);
+  border-radius: 7px;
+  padding: 10px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
