--- a/project-code/assets/style.scss
+++ b/project-code/assets/style.scss
@@ -2,7 +2,6 @@
 
 // Google Fonts Import : Poppins + League Spartan
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
 *{
   margin: 0;
   padding: 0;
@@ -15,6 +14,8 @@
 :root{
   --color-black: #21211c;
   --color-white: white;
+  --color-white2: #dbdbdb;
+
   --color-darkgrey: #323232;
 
   --color-primary: #f8f9f2;
@@ -31,19 +32,76 @@
 }
 
 body {
-  background-color: var(--color-primary);
+  background-color: var(--color-white);
   font-family: var(--font-content);
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr;
   text-align: center;
+  #app{
+    border: 2px solid var(--color-white2);
+    height: 50vh;
+    width: 80%;
+    border-radius: 15px;
+    margin: auto;
+    margin-top: 50px;
+    h1{
+      font-family: var(--font-title);
+      font-weight: 800;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      font-size: 3vw;
+    }
+    #questionContainer{
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      label:first-of-type {
+        margin: 15px 0;
+        width: auto;
+      }
+      input[type="radio"]{
+        display: none;
+      }
+      .radio0, .radio1 , .radio2{
+        display: block;
+        user-select: none;
+        padding: 20px;
+        border: 1px solid var(--color-white2);
+        // background-color: var(--color-white2);
+        width: 30%;
+        text-align: left;
+        margin: auto;
+        margin-bottom: -15px;
 
-  .yes, .no{
-    user-select: none;
-    padding: 20px;
-    border: 1px solid grey;
+        border-radius: 10px;
+      }
+      .radio0:hover, .radio1:hover , .radio2:hover{
+        cursor: pointer;
+      }
+    }
   }
+}
+#restartTestIcon {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease-in-out;
+  font-size: 30px;
+  border: 1px solid var(--color-white2);
+  padding: 5px;
+  padding-top: 6px;
+  padding-bottom: 0px;
+  border-radius: 7px;
+}
 
+#restartTestIcon.show {
+  opacity: 1;
+  visibility: visible;
+}
 
+#startTest{
+  border: 1px solid var(--color-white2);
+  border-radius: 7px;
+  padding: 10px 20px;
 
 }
