--- a/assets/style.scss
+++ b/assets/style.scss
@@ -40,22 +40,57 @@ body {
   text-align: center;
   #app{
     border: 2px solid var(--color-white2);
-    height: 50vh;
     width: 80%;
     border-radius: 15px;
     margin: auto;
     margin-top: 50px;
+    padding-bottom: 30px;
+    @media (max-width: 1250px) {         
+      width: 95%;
+    }
     h1{
       font-family: var(--font-title);
       font-weight: 800;
       margin-top: 30px;
       margin-bottom: 10px;
       font-size: 3vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      @media (max-width: 1250px) {         
+        font-size: 10vw;
+      }
+      img{
+        height: 50px; 
+        margin-right: 15px;
+      }
+      #restartTestIcon {
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.5s ease-in-out;
+        font-size: 30px;
+        border: 1px solid var(--color-white2);
+        padding: 5px;
+        padding-top: 6px;
+        padding-bottom: 0px;
+        border-radius: 7px;
+        margin-left: 15px;
+      }
+      
+      #restartTestIcon.show {
+        opacity: 1;
+        visibility: visible;
+      }
+      
     }
     #questionContainer{
       display: flex;
       justify-content: center;
       flex-direction: column;
+      @media (max-width: 1250px) {         
+        width: 80%;
+        margin: auto;
+      }
       label:first-of-type {
         margin: 15px 0;
         width: auto;
@@ -73,35 +108,65 @@ body {
         text-align: left;
         margin: auto;
         margin-bottom: -15px;
-
         border-radius: 10px;
+
+        @media (max-width: 1250px) {         
+          width: 90%;
+        }
       }
       .radio0:hover, .radio1:hover , .radio2:hover{
         cursor: pointer;
       }
+      .radio0{
+        margin-top: 20px;
+        background-color: rgb(196, 255, 196);
+      }
+      .radio1{
+        background-color: rgb(236, 236, 236);
+      }
+      .radio2{
+        background-color: rgb(255, 188, 188);
+      }
+    }
+    #resultContainer{
+      width: 80%;
+      margin: auto;
+      text-align: left;
     }
   }
-}
-#restartTestIcon {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s ease-in-out;
-  font-size: 30px;
-  border: 1px solid var(--color-white2);
-  padding: 5px;
-  padding-top: 6px;
-  padding-bottom: 0px;
-  border-radius: 7px;
-}
-
-#restartTestIcon.show {
-  opacity: 1;
-  visibility: visible;
 }
 
 #startTest{
   border: 1px solid var(--color-white2);
   border-radius: 7px;
   padding: 10px 20px;
+  font-size: 1vw;
 
+  @media (max-width: 1250px) {         
+    font-size: 5vw;
+    margin: 50px 20px;
+  }
+}
+#progressBarContainer {
+  width: 50%;
+  margin: auto;
+  background-color: #f3f3f3;
+  border-radius: 20px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+#progressBar {
+  width: 0;
+  height: 5px;
+  background-color: #88e28b; 
+  border-radius: 20px 0 0 20px;
+  transition: width 0.4s ease;
+}
+.score{
+  font-size: 2vw;
+
+  @media (max-width: 1250px) {         
+    font-size: 5vw;
+  }
 }
